examples/datalog/15_arithmetic/41_combined_expr.dl.out
Connecting to server at http://127.0.0.1:8080...
Connected!

Server status: healthy
Current knowledge graph: default

> .kg create test_comb_expr
Knowledge graph 'test_comb_expr' created.
Switched to knowledge graph: test_comb_expr
> .kg use test_comb_expr
Switched to knowledge graph: test_comb_expr
> +data[(5, 2), (10, 3), (15, 4)].
Inserted 3 fact(s) into 'data'.
> big_product(A, B) :- data(A, B), A * B > 20.
Script error: Query execution failed: Unsupported comparison: Arithmetic(Binary { op: Mul, left: Variable("A"), right: Variable("B") }) GreaterThan Constant(20)
